alteração no formulario

--- a/assets/css/formulario.css
+++ b/assets/css/formulario.css
@@ -102,11 +102,15 @@ body{
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
+    transition: 0.5s;
+    scale: 10px;
     font-size: 16px;
     color: #333;
     font-weight: 600;
     margin-bottom: 20px 0;
 }
 
-
+.btn:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
